--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "resend": "^4.5.1",
     "stripe": "^18.1.1",
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5",
