credentials/custom auth implemented with bcryptjs, signinform updated, schema updated to include password

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@auth/prisma-adapter": "^2.8.0",
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@types/bcryptjs": "^2.4.6",
     "@uploadthing/react": "^7.3.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.486.0",
