--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@types/bcryptjs": "^2.4.6",
     "@uploadthing/react": "^7.3.0",
+    "@use-gesture/react": "^10.3.1",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.486.0",
-    "next": "15.2.4",
+    "next": "^15.5.2",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
