--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.8.0",
+    "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-dialog": "^1.1.6",
     "@tanstack/react-query": "^5.90.7",
@@ -44,6 +45,7 @@
     "eslint-config-next": "15.2.4",
     "prisma": "^6.6.0",
     "tailwindcss": "^4.1.14",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   },
   "resolutions": {
